k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pci-app
  labels:
    name: pci-app
